Adding sections toggle animation

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
+*
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .bottom-section-bg
 {
     background: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(20.387113571166992px);
+    
 }
 
-.full-size
-{
-    min-height: 100vh;
-    transition-duration: 300ms;
-}
